2007-08-21  Torsten Rahn  <rahn@kde.org>

    Correcting Tim Sutton's ifelse-typo.

2007-08-21  Torsten Rahn  <rahn@kde.org>

	Applied changes by Tim Sutton to make Marble
	work better on the Mac. Also applied changes 
	to correct the credits list.

	See SVN commits rev. 702537, 702676 and 702579 

2007-08-21  Torsten Rahn  <rahn@kde.org>

	Applied changes from Daniel Molkentin and
	Christian Ehrlicher to make Marble work on 
	Windows, see commits 702574 and 702899.

--- Marble 0.4.0 ---

2007-08-19  Torsten Rahn  <rahn@kde.org>

        * CMakeLists.txt: Install License.txt

2007-08-19  Inge Wallin  <inge@lysator.liu.se>

	Rename files according to the coding standards: PlaceMarkInfoDialog
	* src/lib/placemarkinfodialog.cpp: renamed into PlaceMarkInfoDialog.cpp
	* src/lib/placemarkinfodialog.h:   renamed into PlaceMarkInfoDialog.h
	* src/lib/placemarkinfodialog.ui:  renamed into PlaceMarkInfoDialog.ui
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleWidgetpopupMenu.cpp: use new name
	
	Name changes according to the coding standards:
	 - PlaceMarkModel
	 - PlaceMarkPainter
	 - PlaceMarkManager
	* src/lib/placemarkmanager.cpp: renamed into PlaceMarkManager.cpp
	* src/lib/placemarkmanager.h:   renamed into PlaceMarkManager.h
	* src/lib/placemarkmodel.cpp:   renamed into PlaceMarkModel.cpp
	* src/lib/placemarkmodel.h:     renamed into PlaceMarkModel.h
	* src/lib/placemarkpainter.cpp: renamed into PlaceMarkPainter.cpp
	* src/lib/placemarkpainter.h:   renamed into PlaceMarkPainter.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleModel.cpp: use new names
	* src/lib/MarbleModel.h:   use new names

	Name changes according to the coding standards for MapTheme and
	PlaceMark.	
	* src/lib/maptheme.cpp: renamed into MapTheme.cpp
	* src/lib/maptheme.h:   renamed into MapTheme.h
	* src/lib/placemark.cpp: renamed into PlaceMark.cpp
	* src/lib/placemark.h:   renamed into PlaceMark.h
	* src/lib/CMakeLists.txt: Reflect name changes.